# ChangeLog for dev-java/jsch
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.22 2005/01/26 21:36:39 corsair Exp $

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> jsch-0.1.18.ebuild:
  Stable on ppc64

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> jsch-0.1.18.ebuild:
  added ~ppc64 to KEYWORDS

  03 Nov 2004; Thomas Matthijs <axxo@gentoo.org> jsch-0.1.15.ebuild,
  jsch-0.1.16.ebuild, jsch-0.1.17.ebuild, jsch-0.1.18.ebuild:
  depend on app-arch/unzip

*jsch-0.1.18 (28 Oct 2004)

  28 Oct 2004; Thomas Matthijs <axxo@gentoo.org> +jsch-0.1.18.ebuild:
  version bump

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> jsch-0.1.15.ebuild,
  jsch-0.1.16.ebuild, jsch-0.1.17.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*jsch-0.1.17 (28 Sep 2004)

  28 Sep 2004; Thomas Matthijs <axxo@gentoo.org> jsch-0.1.15.ebuild,
  jsch-0.1.16.ebuild, +jsch-0.1.17.ebuild:
  version bump + removed restrict nomirror

*jsch-0.1.16 (10 Sep 2004)

  10 Sep 2004; Thomas Matthijs <axxo@gentoo.org> jsch-0.1.15.ebuild,
  jsch-0.1.16.ebuild:
  changed dependenciess to ant-core

  21 May 2004; Chris Aniszczyk <zx@gentoo.org> -jsch-0.1.12.ebuild,
  -jsch-0.1.14.ebuild, jsch-0.1.15.ebuild:
  Clean up and bumping stable

*jsch-0.1.15 (21 May 2004)

  21 May 2004; Chris Aniszczyk <zx@gentoo.org> +jsch-0.1.15.ebuild:
  Version bump. Closes #51630
  Thanks to Pavel <hlobil@sympatico.ca> for the heads up.

  09 May 2004; Jason Wever <weeve@gentoo.org> jsch-0.1.14.ebuild:
  Added ~sparc keyword to resolve bug #50401.

  04 May 2004; <SeJo@gentoo.org> jsch-0.1.12.ebuild, jsch-0.1.14.ebuild:
  added ~ppc

  08 May 2004; Chris Aniszczyk <zx@gentoo.org> jsch-0.1.12.ebuild:
  Marking stable on x86

*jsch-0.1.14 (30 Mar 2004)

  30 Mar 2004; Chris Aniszczyk <zx@gentoo.org> jsch-0.1.13.ebuild,
  jsch-0.1.14.ebuild:
  Version bump + Clean up. Closes #45703