@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/lucene-1.3.ebuild,v 1.6 2004/10/22 11:28:24 absinthe Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/lucene-1.3.ebuild,v 1.7 2005/02/03 17:35:26 luckyduck Exp $
 
 inherit java-pkg
 
