@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/lucene-1.4.1.ebuild,v 1.4 2004/10/26 12:35:56 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/lucene-1.4.1.ebuild,v 1.5 2005/02/03 17:35:26 luckyduck Exp $
 
 inherit java-pkg
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://jakarta.apache.org/lucene"
 SRC_URI="http://cvs.apache.org/dist/jakarta/lucene/v1.4.1/${P}-src.tar.gz"
 LICENSE="Apache-1.1"
 SLOT="1"
-KEYWORDS="~x86 ~ppc ~amd64"
+KEYWORDS="x86 ~ppc amd64"
 IUSE="jikes doc junit"
 DEPEND=">=virtual/jdk-1.2
 		>=dev-java/ant-1.5
