@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/lucene
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.13 2004/10/27 14:37:45 axxo Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.14 2005/02/03 17:35:26 luckyduck Exp $
+
+  03 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> lucene-1.4.1.ebuild:
+  stable on amd64 and x86.
 
   26 Oct 2004; Thomas Matthijs <axxo@gentoo.org> lucene-1.4.1.ebuild:
   no longer use packed jars, #63281. Thanks too Jan Brinkmann
