@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jsch
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.22 2005/01/26 21:36:39 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.23 2005/02/03 17:39:00 luckyduck Exp $
+
+  03 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> jsch-0.1.18.ebuild:
+  stable on amd64 and x86.
 
   26 Jan 2005; Markus Rothe <corsair@gentoo.org> jsch-0.1.18.ebuild:
   Stable on ppc64
